syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.overlead.gRPC";
option java_outer_classname = "teamtask";
option objc_class_prefix = "tt";
package teamtask;

service TeamTask{
    rpc addNewTeamTask(AddNewTeamTaskReq) returns (AddNewTeamTaskRes) {}
    rpc updateTeamTask(UpdateTeamTaskReq) returns (UpdateTeamTaskRes){}
    rpc registerTeamTask(RegisterTeamTaskReq) returns (RegisterTeamTaskRes){}
	rpc cancelTeamTask(CancelTeamTaskReq) returns (CancelTeamTaskRes){}
	rpc sendTeamTaskToMyTask(SendTeamTaskToMyTaskReq) returns (SendTeamTaskToMyTaskRes){}
	rpc getAllTeamTask(GetAllTeamTaskReq) returns (stream GetAllTeamTaskRes){}
}

message AddNewTeamTaskReq{
    string username = 1;
	string projectId = 2;
	string title = 3;		
	string description = 4;		   
	string priority = 5;
	string start = 6;		 		 // form mm/hh/dd/mm/yyyy       phut/gio/ngay/thang/nam
	string deadline = 7;			// form mm/hh/dd/mm/yyyy
	string assigneeArray = 8;
	string comment = 9;
	string status = 10;				// khi add mac dinh status = "todo"
	string review = 11;	
	string cookie = 12;
}

message AddNewTeamTaskRes{
    string status = 1;
	string teamTaskId = 2;
	string error = 3;
}

message UpdateTeamTaskReq{
	string username = 1;
	string projectId = 2;
	string teamTaskId = 3;
	string title = 4;		
	string description = 5;		   
	string priority =6;
	string start = 7;		 		 // form mm/hh/dd/mm/yyyy       phut/gio/ngay/thang/nam
	string deadline = 8;			// form mm/hh/dd/mm/yyyy
	string assigneeArray = 9;
	string comment = 10;
	string status = 11;	
	string review = 12;	
	string cookie = 13;
}

message RegisterTeamTaskReq{
	string username = 1;
	string projectId = 2;
	string teamTaskId = 3;          // them username vao assignee cua teamtaskId dc chon
	string cookie = 4;
}

message CancelTeamTaskReq{
	string username = 1;
	string projectId = 2;
	string teamTaskId = 3;          // xoa username nay ra khoi assignee cua teamtaskId dc chon
	string cookie = 4;
}

message SendTeamTaskToMyTaskReq{		//them task trong teamtask vao mytask
	string requesterId = 1;
	string projectId = 2;
	string title = 3;		
	string description = 4;		   
	string priority = 5;
	string start = 6;		 		 // form mm/hh/dd/mm/yyyy       phut/gio/ngay/thang/nam
	string deadline = 7;			// form mm/hh/dd/mm/yyyy
	string comment = 8;
	string status = 9;	
	string cookie = 10;	
}

message GetAllTeamTaskReq{
    string userName = 1;
	string projectId = 2;
	string cookie = 3;
}
message GetAllTeamTaskRes{
	string teamtaskId = 1;
	string title = 2;		
	string description = 3;		   
	string priority = 4;
	string start = 5;		 // form mm/hh/dd/mm/yyyy       phut/gio/ngay/thang/nam
	string deadliine = 6;			// form mm/hh/dd/mm/yyyy 
	string assigneeArray = 7;
	string comment = 8;
	string status = 9;	
	string review = 10;		
}